--- a/Informe-Situacion-Actual.Rmd
+++ b/Informe-Situacion-Actual.Rmd
@@ -53,30 +53,37 @@ library(readxl)
 
 # Provisiones y reservas del régimen y su comportamiento.
 
-Se analizará el aspecto financiero que presenta el régimen, el cual, es fundamental para comprender la situación actual del mismo. En este sentido, se procede a estudiar el comportamiento de las reservas y provisiones, para este caso, en términos contables son lo mismo dada la información
-proporcionada por el Fondo C. Esta se puede ver reflejada por medio de los activos con fecha de inicio del 31 de diciembre del 2013 y fecha corte al 31 de diciembre del 2023. 
-
-Según el gráfico 1, se puede observar un crecimiento de las reservas con un incremento mensual casi constante de 2.96% durante el periodo de análisis. Se identifica una subida al inicio
-del 2014 y luego se mantiene con un crecimiento casi constante hasta inicios del 2020, donde se 
-muestra una mayor volatilidad para ese año y el siguiente. Para los años posteriores, se presenta
-una tendencia a la alta, finalizando el 2023 con ₡437 031 071 555 en reservas. 
-Este crecimiento es positivo, ya que, indica una acumulación de recursos en el fondo.
+Una vez explicada la el área legislativa se analizara el aspecto económico que presenta el régimen. El componente económico es fundamental para comprender la situación actual del régimen. Para ello iniciaremos utilizando el Gráfico 1.
+Gracias a este gráfico podemos observar un crecimiento en las variables Activos y Pago de Pensiones. En el caso de los activos se ha producido un incremento casi constante durante le periodo de análisis; salvo el segundo semestre de 2023, donde presenta un aumento en la volatilidad. Este crecimiento es positivo, ya que indica una acumulación de recursos en el fondo.
+En cambio el Pago de Pensiones, presenta una alta volatilidad a lo largo de todo el período estudiado, no solo en los últimos meses, aunque si es necesario resaltar que también presenta un aumento en la volatilidad para el final del período de estudio.
 
 ```{r, warning=FALSE, echo=FALSE}
 Financiero <- read_excel(
   "Fondo C.xlsx",
   sheet = 
     "Financiero"
-)
+) %>% 
+  mutate(
+    Período = 
+      as_date(Período)
+  ) %>% 
+  filter(
+    Período >=
+      as_date("2022-1-1")
+  )
 ```
 
 
-```{r, warning=FALSE, echo=FALSE, message=FALSE}
+```{r, warning=FALSE, echo=FALSE}
 Activo <- Financiero %>% 
+  filter(
+    Período >=
+      as_date("2022-1-1")
+  ) %>%
   ggplot(
     aes(
       x = 
-        as_date(Período),
+        Período,
       y =
         Activo/1000000, 
       col = ""
@@ -96,28 +103,152 @@ Activo <- Financiero %>%
       3
   ) +
   geom_line(linewidth = 1) + 
-  labs(title = "Gráfico 1: Comportamiendo de las Reservas",
-       x = "Año",
+  labs(title = "Activos",
+       x = "",
        y = "Millones de colones") +
   theme_minimal() +
-   theme(legend.position = "none",
-          plot.title = element_text(hjust = 0.5),
+  theme(legend.position = "none",
+        plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C.")) +
-  scale_y_continuous(labels = scales::label_number())+
+        plot.caption = element_text(hjust = 0, color = "black", size = 8),
+        legend.title = element_blank()) +
+  scale_x_continuous(breaks = as_date("2022-1-1") %m+% months(3*(0:8)),
+                     labels = c("Ene", "Abr", "Jul", "Oct",
+                                "Ene", "Abr", "Jul", "Oct", "Ene")) +
   scale_color_manual(
     values =
       c(
         "#A2CD5A"
       )
   )
-
-Activo
-
+################################################################################
+Plusvalía <- Financiero %>% 
+  filter(
+    Período >=
+      as_date("2022-1-1")
+  ) %>%
+  ggplot(
+    aes(
+      x = 
+        Período,
+      y =
+        `Plusvalía/Minusvalias`/1000000,
+      col = ""
+    )
+  ) +
+  geom_line(linewidth = 1.1) + 
+  labs(title = "Plusvalía",
+       x = "Mes",
+       y = "") +
+  theme_minimal() +
+  theme(legend.position = "none",
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8),
+        legend.title = element_blank()) +
+  labs(caption = "") +
+  scale_x_continuous(breaks = as_date("2022-1-1") %m+% months(3*(0:8)),
+                     labels = c("Ene", "Abr", "Jul", "Oct",
+                                "Ene", "Abr", "Jul", "Oct", "Ene")) +
+  scale_color_manual(
+    values =
+      c(
+        "#4B7F52"
+      )
+  )
+################################################################################
+Cotizaciones <- Financiero %>% 
+  filter(
+    Período >=
+      as_date("2022-1-1")
+  ) %>%
+  ggplot(
+    aes(
+      x = 
+        Período,
+      y =
+        `Cotizaciones Netas`/1000000,
+      col = ""
+    )
+  ) +
+  geom_line(linewidth = 1.3)+ 
+  labs(title = "Cotizaciones Netas",
+       x = "Mes",
+       y = "Millones de colones") +
+  theme_minimal() +
+  theme(legend.position = "none",
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8),
+        legend.title = element_blank()) +
+  labs(
+    caption = 
+      expression(bold("Fuente: ") * "Elaborados a partir de datos del Fondo C")) +
+  scale_x_continuous(breaks = as_date("2022-1-1") %m+% months(3*(0:8)),
+                     labels = c("Ene", "Abr", "Jul", "Oct",
+                                "Ene", "Abr", "Jul", "Oct", "Ene")) +
+  scale_color_manual(
+    values =
+      c(
+        "cadetblue3"
+      )
+  )
+################################################################################
+Pensiones <- Financiero %>% 
+  filter(
+    Período >=
+      as_date("2022-1-1")
+  ) %>%
+  ggplot(
+    aes(
+      x = 
+        Período,
+      y =
+        `Pago de Pensiones`/1000000,
+      col = "1"
+    )
+  ) +
+  geom_smooth(method = "lm", color = "#2F4F4F",linetype = 3) +
+  geom_line(linewidth = 1.3) + 
+  labs(title = "Pago de pensiones",
+       x = "",
+       y = "") +
+  theme_minimal() +
+  theme(legend.position = "none",
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8),
+        legend.title = element_blank()) +
+  scale_x_continuous(breaks = as_date("2022-1-1") %m+% months(3*(0:8)),
+                     labels = c("Ene", "Abr", "Jul", "Oct",
+                                "Ene", "Abr", "Jul", "Oct", "Ene")) +
+  scale_color_manual(
+    values =
+      c(
+        "#2F4F4F"
+      )
+  )
 ```
+\begin{wrapfigure}[15]{r}{0.5\textwidth}
 
-\newpage
+ \centering
+ 
+```{r , fig.align='right', echo=FALSE, warning=FALSE,message=FALSE}
+grid.arrange(Activo, Pensiones, Cotizaciones, Plusvalía, nrow = 2, ncol = 2, top = "Grafico 1: Comportamiento finaciero del Regimen \n 2022-2023")
+```
+\end{wrapfigure}
+
+Aunque en el periodo estudiado existe incremento en las pago de pensiones, esto no sucede de igual manera con las Cotizaciones Netas. Lo cual si  bien es cierto que promedian el doble de que los Pagos al momento del análisis, 31/12/2023, estos están incrementando a gran medida. Siendo que de continuar de esta forma el Fondo C podría llegar un punto donde las Cotizaciones no sean suficientes para cubrir los Pagos. Teniendo así que depender de las plusvalías para poder cubrir con las obligaciones del fondo. 
+
+Las plusvalías en el año 2022 presento sentaron una disminución considerable y aunque para el siguiente hizo un existió una mejoría esta vino acompañada de una gran volatilidad hasta al punto que el fondo alcanzo montos negativos (Minusvalías) en octubre de ese año.  Por ello una de las partes mas inportante para profundizar el tema de como se distribuyen las inversiones del Fondo C.
+
+
+
+
+
+
+
+
 # Marco Legal
 
 \begingroup
@@ -223,7 +354,7 @@ Si la suma de las pensiones de viudez y orfandad es menor al 100\%, el remanente
 
 # Comportamiento de las inversiones, los gastos de administración y otras variables financieras.
 
-El Régimen de Capitalización Colectiva (RCC) del Fondo C cuenta con información
+El Régimen de Capitalización Colectiva (RCC) del fondo C cuenta con información
 del portafolio de inversiones. No posee gastos administrativos, pues, son 
 asumidos por la empresa administradora. Asímismo, tampoco presenta otras variables
 financieras que influyan en el régimen.
@@ -233,6 +364,7 @@ inversiones.
 A continuación, se presenta la composición de la cartera, a valor de mercado, de
 las inversiones al 31 de diciembre del 2023 según tres criterios: Sector,
 plazo de vencimiento y moneda.
+
 
 
 ```{r, warning=FALSE, echo=FALSE}
@@ -247,7 +379,7 @@ graf_sector <- ggplot(inversiones_sector, aes(x = RCC, y = Sector)) +
    geom_bar(stat = "identity", alpha = 0.7, position = "stack", width = 0.4, 
             fill = "#2F4F4F") +
   geom_text(aes(label = paste0(RCC,"%")), position = position_stack(vjust = 0.5), size = 3) +
-  labs(title = " Gráfico 2: Composición de la Cartera de \n Valores", 
+  labs(title = " Gráfico #: Composición de la Cartera de \n Valores", 
        subtitle = "por Sector",
        x = "RCC (%)",
        y = "Sector") +
@@ -257,7 +389,7 @@ graf_sector <- ggplot(inversiones_sector, aes(x = RCC, y = Sector)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") *"Elaborado a partir de datos del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") *"Elaborado a partir de datos del Fondo C"))
 ```
 
 \begin{wrapfigure}[15]{r}{0.5\textwidth}
@@ -269,7 +401,7 @@ graf_sector <- ggplot(inversiones_sector, aes(x = RCC, y = Sector)) +
 ```
 \end{wrapfigure}
 
-El gráfico 2 muestra que el portafolio de inversiones está compuesto en un 6.8%
+El gráfico # muestra que el portafolio de inversiones está compuesto en un 6.8%
 por la  cartera de crédito y el restante 93.2% corresponde a la cartera de valores. De esta,
 la mayor parte de las inversiones del régimen se encuentran en el BCCR-MH,
 con un 76.1%. Se puede observar que, un 4.6% de las inversiones se encuentran en el sector 
@@ -277,11 +409,10 @@ Público y un 10.3% en el sector Privado. Las inversiones en el Mercado
 Internacional es de un 2.1%.
 
 Además, la cartera de crédito del portafolio de inversiones tiene un 
-plazo de vencimiento promedio de 10 años. Según el gráfico 3, la mayoría de las 
+plazo de vencimiento promedio de 10 años. Según el gráfico #, la mayoría de las 
 emisiones de las inversiones de la cartera de valores se concentran en el plazo 
 de más de 15 años. Seguido del plazo de 4 a 5 años y 5 a 10 años. La minoría de 
 las inversiones se emiten en el plazo de 10 a 15 años. 
-
 
 ```{r, warning=FALSE, echo=FALSE}
 inversiones_plazo <- data.frame("Plazo"= c("Hasta un año","De 2 a 3 años",
@@ -299,7 +430,7 @@ inversiones_plazo$Plazo <- factor(inversiones_plazo$Plazo, levels = c(
 graf_plazo <- ggplot(inversiones_plazo, aes(x = Plazo, y = RCC)) +
   geom_bar(stat = "identity", fill = "cadetblue3", width = 0.5) +
   geom_text(aes(label = paste0(RCC,"%")), position = position_stack(vjust = 0.5), size = 3) +
-  labs(title = " Gráfico 3: Composición de la Cartera de Valores", 
+  labs(title = " Gráfico #: Composición de la Cartera de Valores", 
       subtitle = "por Plazo de Vencimiento",
        x = "Plazo de vencimiento",
        y = "RCC (%)") +
@@ -309,10 +440,10 @@ graf_plazo <- ggplot(inversiones_plazo, aes(x = Plazo, y = RCC)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C"))
 ```
 
-\begin{wrapfigure}[7]{l}{0.5\textwidth}
+\begin{wrapfigure}[15]{l}{0.5\textwidth}
 
  \centering
  
@@ -320,7 +451,6 @@ graf_plazo <- ggplot(inversiones_plazo, aes(x = Plazo, y = RCC)) +
  graf_plazo
 ```
 \end{wrapfigure}
-
 
 ```{r, warning=FALSE, echo=FALSE}
 inversiones_moneda <- data.frame("Moneda"= c("Colones","Dólares", 
@@ -331,7 +461,7 @@ inversiones_moneda <- data.frame("Moneda"= c("Colones","Dólares",
 graf_moneda <- ggplot(inversiones_moneda, aes(x = Moneda, y = RCC)) +
   geom_bar(stat = "identity", fill = "#BCEE68",  width = 0.5) +
   geom_text(aes(label = paste0(RCC,"%")), position = position_stack(vjust = 0.5), size = 3) +
-  labs(title = "Gráfico 4: Composición de la Cartera de Valores",
+  labs(title = "Gráfico #: Composición de la Cartera de Valores",
        subtitle = "por Moneda",
        x = "Moneda",
        y = "RCC (%)") +
@@ -341,11 +471,11 @@ graf_moneda <- ggplot(inversiones_moneda, aes(x = Moneda, y = RCC)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C"))
 
 ```
 
-\begin{wrapfigure}[7]{l}{0.5\textwidth}
+\begin{wrapfigure}[15]{l}{0.5\textwidth}
 
  \centering
  
@@ -355,13 +485,6 @@ graf_moneda <- ggplot(inversiones_moneda, aes(x = Moneda, y = RCC)) +
 \end{wrapfigure}
 
 Por otro lado, el total de la cartera de crédito está en colones. En cuanto a
-la cartera de valores, se muestra en el gráfico 4 que la mayoría de los 
+la cartera de valores, se muestra en el gráfico # que la mayoría de los 
 instrumentos financieros están invertidos en colones (57.1%), un 18.9% en 
 Unidades de Desarrollo (moneda virtual) y el restante se invierte en dólares (17.2%).
-
-
-\newpage
-
-# Bibliografía 
-
-- Sistema Costarricense de Información Jurídica. (s.f). Reglamento del Seguro de Invalidez, Vejez y Muerte de la Caja Costarricense de Seguro Social. http://www.pgrweb.go.cr/scij/Busqueda/Normativa/Normas/nrm_texto_completo.aspx?param1=NRTC&nValor1=1&nValor2=26485&strTipM=TC
