--- a/Informe Metodología/Metodología.Rmd
+++ b/Informe Metodología/Metodología.Rmd
@@ -127,8 +127,21 @@ se calcula el monto de la pensión y se proyecta hasta que salga del fondo. Así
 se calculan los beneficios a pagar e ingresos por cotizaciones que tiene el régimen.
 Posteriormente, estos montos se traen a valor presente actuarial a la fecha de corte.
 
+# Base de datos
 
-# Supuestos
+La información fue suministrada mediante archivos con formato xls, según se detalla a continuación:
+
+\begin{itemize}
+    \item \textbf{Base de datos de los pensionados:} Pensionados al 31 de diciembre de 2023. Incluye ID del pensionado, fecha  de nacimiento, sexo, tipo de pensión, parentesco para pensión por sucesión, fecha de vigencia de la pensión y monto de la pensión mensual actual. 
+    \item \textbf{Base de datos de los activos:} Activos al 31 de diciembre de 2023. Incluye ID del activo, fecha de nacimiento, sexo, monto y fecha de cotización desde el 1 de enero de 1994.
+    \item \textbf{Base de datos de informacion financiera:} Situación financiera del régimen al 31 de diciembre de 2023. Incluye periodo (mensual desde diciembre 2013), montos del activo, plusvalía o minusvalía, monto de ingresos por cotizaciones netas, y monto de salidas por pago de pensiones.
+    \item \textbf{Estado financiero:} Anual, 2023. Provee una visión de la situación financiera actual y provee el monto de las reservas. 
+
+\end{itemize}
+
+En general, las bases de datos utilizadas son de buena calidad y proporcionan la información necesaria para la evaluación actuarial. Los datos están completos y organizados, permitiendo análisis confiables.
+
+# Supuestos Actuariales
 
 En esta sección se detallan los supuestos utilizados en la evaluación actuarial.
 
@@ -144,6 +157,15 @@ Los montos de pensión se actualizan 1 vez al año, específicamente en el mes d
 
 ### Tasa de rendimiento
 
+Se asume una tasa de rendimiento constante de 14.66% esta debido a que se obtuvieron los rendimientos anuales del fondo históricos como se muestra en la figura \ref{fig:rendimientos} y a partir de estos se obtuvo el promedio. Se toma como un buen parámetro el que sea constante debido a que las fluctuaicones del rendimiento oscilan entre este valor de un año a otro. 
+
+\begin{figure}[H]
+\centering
+\caption{Rendimientos anuales del Fondo}
+\includegraphics[width=\textwidth]{Rendimientos.png}
+\label{fig:rendimientos}
+\caption*{Fuente: Elaboración propia a partir de datos del Fondo C.}
+\end{figure}
 
 ### Gastos administrativos
 
@@ -170,7 +192,6 @@ Se va a asumir que las personas pertenecientes al régimen siguen el cuadro \ref
   \hline \multicolumn{4}{|r|}{{Continúa en la próxima página}} \\ \hline
   \endfoot
 
-  \hline
   \endlastfoot
 
   % Aquí se incluyen las filas de datos
@@ -247,7 +268,7 @@ Por la información brindada se asume que la probabilidad de que un trabajador p
 Se asume que las personas aumentan su salario una vez al año por medio de la escala salarial, la cual está compuesta por el factor inflacionario debido al ajuste al costo de vida y un factor de antiguedad definido por la edad del asegurado. Entonces el salario de una persona a la edad x va a estar dado por: 
 $$S_x = S_{x-1}(1+i)(1+j_x)$$
 
-donde $S_x$ representa el salario a la edad $x$, $i$ es el porcentaje de inflación y $j_x$ el porcentaje de variación del salario por antiguedad para la edad $x$. Este factor de antiguedad viene definido por edad en el cuadro \ref{tab:salario}. 
+donde $S_x$ representa el salario a la edad $x$, $i$ es el porcentaje de inflación y $j_x$ el porcentaje de variación del salario por antiguedad para la edad $x$. Este factor de antiguedad viene definido por edad en el cuadro \ref{tab:salario} y se puede observar la tendencia del mismo en la figura \ref{fig:salario} donde coforme aumenta la edad este decrece, sin embargo, al final tiende a un aumento esto por la estructura de la población activa del régimen.
 
 \begin{longtable}{|c|c|c|c|}
     \caption{Factor de antiguedad por edad} \label{tab:salario} \\
@@ -266,10 +287,8 @@ donde $S_x$ representa el salario a la edad $x$, $i$ es el porcentaje de inflaci
   \hline \multicolumn{4}{|r|}{{Continúa en la próxima página}} \\ \hline
   \endfoot
 
-  \hline
   \endlastfoot
 
-  % Aquí se incluyen las filas de datos
   19 & 0 & 49 & 0.0119 \\
 
   20 & 0.0107 & 50 & -0.0069 \\
@@ -334,9 +353,17 @@ donde $S_x$ representa el salario a la edad $x$, $i$ es el porcentaje de inflaci
     \caption*{Fuente: Elaboración propia a partir de datos del Fondo C.} 
 \end{longtable}
 
+\begin{figure}[H]
+\centering
+\caption{Variación del salario por edad}
+\includegraphics[width=\textwidth]{Salario.png}
+\label{fig:salario}
+\caption*{Fuente: Elaboración propia a partir de datos del Fondo C.}
+\end{figure}
+
 ## Porcentaje de cotización
 
-Por la información brindada se asume que la cotización aportada por los trabajadores, patrono y estado como tal suma 15\% del salario de base. En el cuadro () se muestra la distribución de la contribución. 
+Por la información brindada se asume que la cotización aportada por los trabajadores, patrono y estado como tal suma 15\% del salario de base. En el cuadro \ref{tab:contribuciones} se muestra la distribución de la contribución. 
 
 \begin{table}[h]
     \centering
