--- a/Informe Metodología/Financiero.Rmd
+++ b/Informe Metodología/Financiero.Rmd
@@ -9,20 +9,19 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-Salarios2023 <- subset(salarios_edad, Año == 2023)
+# Convertimos el dataframe de formato largo a formato ancho
 
-# se cambia un poco el orden de las variables 
-Salarios2023T <- data.frame(ID = Salarios2023$ID, 
-                                     Edad = Salarios2023$edad, 
-                                     "2023" = Salarios2023$Salario)
-colnames(Salarios2023T)[colnames(Salarios2023T) == "X2023"] <- "2023"
-Salarios2023T <- na.omit(Salarios2023T)
+Salarios_proyectados <- salarios_edad[,-4] %>%
+  pivot_wider(names_from = Año, values_from = Salario) 
+
 
 for (i in 1:100) {
   year <- 2023 + i
-  Salarios2023T[[as.character(year)]] <- 0  # Agregar columnas vacías
+  Salarios_proyectados[[as.character(year)]] <- 0  # Agregar columnas vacías
 }
 
+
+Salarios_proyectados <- Salarios_proyectados %>% mutate(edad = activos$Edad)
 ```
 
 
@@ -35,30 +34,30 @@ for (i in 1:100) {
   actual <- as.character(year)
   
 
-  Salarios2023T[[actual]] <- Salarios2023T[[previo]]* (1 + inflacion)
+  Salarios_proyectados[[actual]] <- Salarios_proyectados[[previo]]* (1 + inflacion)
 }
 ```
 
 
 ```{r}
 # Se crea df para tener la variacion de salarios
-escalaSalariosedad <-  Salarios2023T[, c("ID", "Edad")]
-anios <- as.character(2023:2123)
+escalaSalariosedad <-  Salarios_proyectados[, c("ID", "edad")]
+anios <- as.character(1994:2123)
 escalaSalariosedad[anios] <- NA
-escalaSalariosedad$"2023" <- 1
+escalaSalariosedad[,3:32] <- 1
 ```
 
 ```{r}
 # Se obtiene la varicion según edad en cada año a cada individuo
 for (i in 1:nrow(escalaSalariosedad)) {
   for (j in 2024:2123) {
-    current_age <- escalaSalariosedad$Edad[i] + (j - 2023)
+    current_age <- escalaSalariosedad$edad[i] + (j - 2023)
     
-    if (current_age > 78) {
+    if (current_age > 115) {
       break  # Si la edad actual es mayor a 78, salir del bucle interno
     }
     
-    variacion <- promedios_edad_final$Variacion[promedios_edad_final$edad == current_age]
+    variacion <- variacion_proyectada$variacion[variacion_proyectada$edad == current_age]
     if (length(variacion) > 0) {  # Verificar que se encontró una variación
       escalaSalariosedad[i, as.character(j)] <- 1 + variacion
     }
@@ -69,11 +68,11 @@ for (i in 1:nrow(escalaSalariosedad)) {
 ```{r}
 #Se hace la proyección final con inflación y escala salarial
 
-ID <- Salarios2023T$ID
-Edad <- Salarios2023T$Edad
+ID <- Salarios_proyectados$ID
+Edad <- Salarios_proyectados$edad
 
 
-productos <- Salarios2023T[, as.character(anios)] * escalaSalariosedad[, as.character(anios)]
+productos <- Salarios_proyectados[, as.character(anios)] * escalaSalariosedad[, as.character(anios)]
 
 
 ProyeccionSalarios <- data.frame(ID, Edad, productos)
