--- a/Informe Metodología/Si usar.Rmd
+++ b/Informe Metodología/Si usar.Rmd
@@ -10,6 +10,69 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
+
+```{r}
+Activos2023 <- activos %>% 
+  select(
+    ID,
+    Edad,
+    `ene/2023`,
+    `feb/2023`,
+    `mar/2023`,
+    `abr/2023`,
+    `may/2023`,
+    `jun/2023`,
+    `jul/2023`,
+    `ago/2023`,
+    `sep/2023`,
+    `oct/2023`,
+    `nov/2023`,
+    `dic/2023`
+  ) %>% 
+  mutate(
+    Salario =
+      `ene/2023` +
+      `feb/2023` +
+      `mar/2023` +
+      `abr/2023` +
+      `may/2023` +
+      `jun/2023` +
+      `jul/2023` +
+      `ago/2023` +
+      `sep/2023` +
+      `oct/2023` +
+      `nov/2023` +
+      `dic/2023`
+    
+  ) %>% 
+  select(
+    ID,
+    Edad,
+    Salario
+  ) %>% 
+  mutate(
+    as.data.frame(
+      matrix(
+        0,
+        nrow =
+          length(ID),
+        ncol =
+          100
+      )
+    )
+  )
+
+# Salario_Anual_Proyectado <- 
+
+as.data.frame(
+  (1+inflacion)*variacion_proyectada[Edad-19+1:100],
+  nrow=5353)
+)
+
+activos$Edad %>% max
+cumprod(1:4)
+```
+
 ```{r}
 dfActivos <- lista_pensionados_activos[[5]]
 
@@ -38,6 +101,16 @@ View(Cotizacion_Anuales)
 ```{r}
 sum(Salarios_proyectados[!is.na(Salarios_proyectados[31]),31])
 sum(Salarios_proyectados[Cotizaciones_Activos$Fila,31])
+```
+
+```{r}
+sum(salarios_edad %>% 
+  filter(
+    Año == "2023" & !is.na(Salario)
+  ) %>% 
+    select(
+      Salario
+    ))
 ```
 
 
